# agentflow

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: adoption-story.md  bug-report.md  config.yml  feature-request.md  integration-request.md
.github/workflows/: ci.yml  publish.yml
agentflow/: __init__.py
agentflow/agents/: __init__.py  base_agent.py  executor.py  planner.py  validator.py
agentflow/caching/: __init__.py  backends.py  response_cache.py
agentflow/connectors/: __init__.py  base.py
agentflow/connectors/aws/: __init__.py  client.py
agentflow/connectors/azure/: __init__.py  client.py
agentflow/connectors/graphql/: __init__.py  client.py
agentflow/connectors/mulesoft/: __init__.py  client.py
agentflow/connectors/rest/: __init__.py  auth.py  client.py
agentflow/core/: __init__.py  context.py  cyclic_workflow.py  orchestrator.py  plan.py
agentflow/nlp/: __init__.py  hybrid_intent_parser.py  intent_parser.py  llm_intent_parser.py  llm_provider.py
agentflow/observability/: __init__.py  metrics.py  tracer.py
agentflow/resilience/: __init__.py  bulkhead.py  circuit_breaker.py  cooldown_strategy.py  retry_policy.py
agentflow/routing/: __init__.py  adaptive_weight_optimizer.py  budget_router.py  dynamic_router.py
agentflow/utils/: __init__.py
benchmarks/: __init__.py  baseline_comparison.py
docs/: architecture.md  baseline-comparison.md  case-study-real-world.md  circuit-breaker.md  custom_agents.md  llm-intent-parsing.md  mulesoft_guide.md  parser-quality.md  reviewer-response.md  routing-engine.md  routing-weights-ablation.md  routing.md
examples/: basic_orchestration.py  custom_agents.py  ecommerce_fulfillment.py  fintech_compliance.py  healthcare_orchestration.py  helloworld.py  multicloud_migration.py  real_world_public_apis.py  resilience_patterns.py
examples/mulesoft-anypoint-demo/: README.md  mule-artifact.json  pom.xml
examples/mulesoft-anypoint-demo/src/main/api/: agentflow-api.raml
examples/mulesoft-anypoint-demo/src/main/mule/: agentflow-error-handler.xml  agentflow-main.xml
examples/mulesoft-anypoint-demo/src/main/resources/: config.yaml  local.properties
experiments/: __init__.py  intent_corpus.py  parser_quality_benchmark.py  routing_weight_ablation.py
tests/integration/: test_orchestrator_hybrid_e2e.py
tests/unit/: test_adaptive_weight_optimizer.py  test_aws_connector.py  test_azure_connector.py  test_baseline_comparison.py  test_budget_router.py  test_bulkhead.py  test_circuit_breaker.py  test_cooldown_strategy.py  test_cyclic_workflow.py  test_dynamic_router.py  test_graphql_connector.py  test_intent_parser.py  test_large_graph.py  test_llm_intent_parser.py  test_observability.py  test_parser_quality_benchmark.py  test_plan.py  test_response_cache.py  test_rest_connector.py  test_retry_policy.py  test_routing_weight_ablation.py
