[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "1.1.2"
description = "A Multi-Agent Framework for AI-Powered Enterprise API Orchestration"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Venkata Pavan Kumar Gummadi", email = "venkata.p.gummadi@ieee.org"},
]
keywords = [
    "ai", "agents", "api-orchestration", "mulesoft", "anypoint",
    "multi-agent", "resilience", "circuit-breaker", "dynamic-routing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
]

# aiohttp is used by the REST/MuleSoft connectors and the public-API
# example, so a plain `pip install agentflow` should be enough to run
# the helloworld and real-world examples without surprise ImportErrors.
dependencies = ["aiohttp>=3.9.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
all = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0",
]
mulesoft = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/venkatapgummadi/agentflow"
Repository = "https://github.com/venkatapgummadi/agentflow"
Issues = "https://github.com/venkatapgummadi/agentflow/issues"

[tool.setuptools.packages.find]
# Ship the framework plus the reproducible-experiment scripts and the
# baseline-modelling harness, so end users can run `python -m
# experiments.parser_quality_benchmark` against their own LLM providers
# after a plain `pip install agentflow`.
include = ["agentflow*", "experiments*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
